--- a/2022/blog-20220315-dst.md
+++ b/2022/blog-20220315-dst.md
@@ -1,4 +1,4 @@
-# Daylight Saving Time *Forever*
+# Daylight Wasting Time
 
 Here is my largely unverified theory of DST. DST was first introduced on a
 large scale after WW2, to save energy. It was deemed easier to change the
