blog-20210827-ipv6: update

--- a/2021/blog-20210827-ipv6.md
+++ b/2021/blog-20210827-ipv6.md
@@ -41,6 +41,6 @@ every mm³ throughout the Earth: about 10⁸ per mm³.
 
 Should last a while. No?
 
-The cynic might say that address ranges will be given away too freely, so that
+The ~~cynic~~ realist might say that address ranges will be given away too freely, so that
 we will be in the same conundrum again soon
 enough.
